[gd_scene load_steps=5 format=3 uid="uid://obgse7pswrs8"]

[ext_resource type="Script" path="res://src/scripts/main_menu.gd" id="1_m56ck"]
[ext_resource type="Theme" uid="uid://bvcjmtdba2hmg" path="res://data/themes/button_theme.tres" id="2_3e6j6"]
[ext_resource type="Texture2D" uid="uid://cmnyjvab7aa4d" path="res://data/textures/drawings/title.png" id="2_o81yn"]

[sub_resource type="Theme" id="Theme_b8dvp"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m56ck")

[node name="TextureRect" type="TextureRect" parent="."]
process_priority = -6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_o81yn")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -50.0
offset_right = -56.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3e6j6")
text = "Play"

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3e6j6")
text = "Quit"

[node name="creditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3e6j6")
text = "Credits"

[node name="credits" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 15.0
offset_top = 18.0
offset_right = 260.0
offset_bottom = 408.0
theme = SubResource("Theme_b8dvp")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[center]OUR TEAM

Sydney Coleman: 3D Design
Xander Boutin: 3D Design
Zac Huber: Programming
Sydney Schnurr: Music & SFX
Jade Harnett: Illustration
Dawson Hogg: Sounds

Licensed stuff

Music: 

Sounds:

"

[node name="credits2" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 511.0
offset_top = 18.0
offset_right = 756.0
offset_bottom = 408.0
theme = SubResource("Theme_b8dvp")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[center]Attribution[/center]
Under water - SamualFJohanns
Under water ambience - u_jety9kd4hd
Creaking old iron door - Alex_Jauk
Ship Creaking-24b - freesound_community
Hull Breach - freesound_community
Echo propeller - freesound_community
G45-24-Submarine interior engine room - freesound_community
Submarine - DominiqueLACAUD
Clock alarm - Microsammy
Swiss chocolate sea monster - freesound_community
Severe warning sound - freesound_community
Emergency alarm with reverb - freesound_community
Loop air bubbles - soundshmyak
Submarine sonar - freesound_community
Metal creaks - Irhouen
Water splash - Universfield
Switch - SoundReality
Footsteps stairs slow - freesound_community"

[connection signal="button_down" from="VBoxContainer/startButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/quitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_down" from="VBoxContainer/creditsButton" to="." method="_on_credits_button_button_down"]
